turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:21: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:34: error: Unmatched closing brace '}' ignored here
}
^